--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
 	"start": "forever start app.js",
-    "stop":  "forever stop app.js"
+    "stop":  "forever stop app.js",
     "type": "git",
     "url": "git+https://github.com/39781/EFlight.git"
   },
