--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Information & Booking flight services",
   "main": "index.js",
   "scripts": {
-    "start": "forever start app.js",
+    "start": "node app.js",
     "stop": "forever stop app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
